<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_gradient_background_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_cloud"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/loginEmailForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_form_text"
            android:inputType="textEmailAddress"
            android:layout_marginTop="43dp"
            android:padding="10dp"
            android:background="@drawable/fill_form_background"
            android:layout_marginHorizontal="24dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/loginPasswordForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_form_text"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:background="@drawable/fill_form_background"
            android:layout_marginHorizontal="24dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginHorizontal="24dp" />

        <TextView
            android:id="@+id/registrationFormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_form_text"
            android:textColor="@color/white"
            android:layout_marginTop="34dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="24dp"/>

    </LinearLayout>
</RelativeLayout>
