<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_gradient_background_1"
    tools:context=".activities.DashboardActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/subHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_user_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <!-- Email TextView -->
                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_user_email"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:padding="8dp"
                android:text="@string/logout_button_text"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_to_dashboard"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sloganTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_slogan"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="43dp"
            android:autofillHints=""
            android:background="@drawable/fill_form_background"
            android:hint="@string/enter_city_name"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/search_by_city_button" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/ic_cloud" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weatherIcon"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="Location"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Clear"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="25°C"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Humidity: 60%"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Wind: 10 m/s"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
